lesson-25/k8s/example-4/deploy-svc-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber
  namespace: demo
  labels:
    app: kuber
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: kuber-app
        image: bakavets/kuber
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
  namespace: demo
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
